# pico

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  COPYING  Makefile  Pipe.hpp  README.md  makedoc.sh  sonar-project.properties
Doxygen/: Doxyfile  generateAndDeploy.sh
Internals/: GroupParam.hpp  ParExecDF.hpp  WindowParam.hpp  WindowPolicy.hpp  utils.hpp
Internals/FFOperators/: BCastEmitter.hpp  BinaryMapFarm.hpp  Collector.hpp  Emitter.hpp  FMapBatch.hpp  FMapPReduceBatch.hpp  FarmCollector.hpp  FarmEmitter.hpp  FoldReduceBatch.hpp  MapBatch.hpp  MapPReduceBatch.hpp  PReduceBatch.hpp  PReduceFFNode.hpp  PReduceFFNodeMB.hpp  PReduceFFNodeMBOLD_OLD.hpp  PReduceSeq.hpp  PReduceSeqFFNode.hpp  PReduceWin.hpp  RREmitter.hpp  StableSortBatch.hpp  UnaryFMapBatch.hpp  UnaryFMapReduceBatch.hpp  UnaryFlatMapFFNode.hpp  UnaryFlatMapFFNodeMB.hpp  UnaryFlatMapFFNodeMBOLD_OLD.hpp  UnaryMapBatch.hpp  UnaryMapFFNode.hpp  UnaryMapFFNodeMB.hpp  UnaryMapFFNodeMBOLD_OLD.hpp  ff_config.hpp
Internals/FFOperators/InOut/: ReadFromFakeSocket.hpp  ReadFromFileFFNode.hpp  ReadFromFileFFNode2.hpp  ReadFromFileFFNodeMB.hpp  ReadFromHDFSFFNode.hpp  ReadFromSocketFFNode.hpp  ReadFromSocketFFNodeMB.hpp  WriteToDiskFFNode.hpp  WriteToDiskFFNode2.hpp  WriteToDiskFFNodeMB.hpp  WriteToStdOutFFNode.hpp  WriteToStdOutFFNodeMB.hpp
Internals/FFOperators/SupportFFNodes/: BCastEmitter.hpp  Collector.hpp  Emitter.hpp  FarmCollector.hpp  FarmEmitter.hpp  FarmWrapper.hpp  MergeCollector.hpp  MergeEmitter.hpp  RREmitter.hpp
Internals/FFOperators/WindowFFNodes/: ByKeyEmitter.hpp  KeyWinEmitter.hpp  OFarmEmitter.hpp  WinBatchEmitter.hpp
Internals/Graph/: SemDAGNode.hpp  SemanticDAG.hpp
Internals/Types/: FlatMapCollector.hpp  Global.hpp  KeyValue.hpp  Microbatch.hpp  TimedToken.hpp  Token.hpp
Operators/: BinaryMap.hpp  BinaryOperator.hpp  FlatMap.hpp  FoldReduce.hpp  Map.hpp  Operator.hpp  PReduce.hpp  Reduce.hpp  UnaryOperator.hpp
Operators/InOut/: InputOperator.hpp  OutputOperator.hpp  ReadFromFile.hpp  ReadFromHDFS.hpp  ReadFromSocket.hpp  WriteToDisk.hpp  WriteToStdOut.hpp
cmake/: CheckCompilerVersion.cmake  config.cmake
defines/: Global.hpp
docs/: Doxyfile.in
examples/: CMakeLists.txt  README.md
examples/common/: utils.hpp
examples/foldreduce/: Makefile  pico_foldred.cpp
examples/foldreduce/data/: input
examples/include/: timers.hpp  utils.hpp
examples/page-rank/: CMakeLists.txt  Makefile  README.md  pagerank.cpp
examples/page-rank/testdata/: CMakeLists.txt  Makefile  prg-convert.cpp
examples/pagerank/: Makefile  defs.hpp  pico_pr_init.cpp  pico_pr_iter.cpp
examples/sort/: Makefile  foldreduce.dot  pico_foldred  pico_foldred.cpp
examples/stock-market/: CMakeLists.txt  Makefile  README.md  binomial_tree.hpp  black_scholes.hpp  common.hpp  defs.h  explicit_finite_difference.hpp  howtorun  monte_carlo.hpp  run_pico_sar.sh  run_stock_pricing_stream.sh  run_stock_tweets.sh  run_stockpricing_multi.sh  run_stockpricing_suite.sh  run_stockpricingbatch_suite.sh  run_stream.sh  seq_stock_pricing.cpp  seq_stock_tweets.cpp  stock_max.cpp  stock_min_max  stock_min_max.cpp  stock_pricing.cpp  stock_pricing_stream.cpp  stock_tweets.cpp
examples/stock-market/testdata/: CMakeLists.txt  Makefile  generate_tweets.cpp  generate_tweets_sock.cpp  nasdaq_europe.txt  tag_options.cpp
examples/word-count/: CMakeLists.txt  Makefile  README.md  pico_pr_iter.cpp  pico_wc.cpp  pico_wc_hdfs.cpp  pico_wc_iter.cpp  run_pico_sar.sh  run_wordcount.sh  seq_wc.cpp
examples/word-count/testdata/: CMakeLists.txt  Makefile  generate_text.cpp  loremipsum.txt  nopunct.txt  red_lorem.txt
ff/: gt.hpp  lb.hpp  node.hpp
include/pico/: FlatMapCollector.hpp  KeyValue.hpp  PEGOptimizations.hpp  Pipe.hpp  SemanticGraph.hpp  TerminationCondition.hpp  WindowPolicy.hpp  pico.hpp
include/pico/Internals/: Microbatch.hpp  TimedToken.hpp  Token.hpp  utils.hpp
include/pico/Operators/: BinaryOperator.hpp  FlatMap.hpp  FoldReduce.hpp  JoinFlatMapByKey.hpp  Map.hpp  Operator.hpp  Reduce.hpp  ReduceByKey.hpp  UnaryOperator.hpp
include/pico/defines/: Global.hpp
include/pico/ff_implementation/: FastFlowExecutor.hpp  defs.hpp  ff_config.hpp
pico/: FastFlowExecutor.hpp  FlatMapCollector.hpp  KeyValue.hpp  PEGOptimizations.hpp  Pipe.hpp  SemanticGraph.hpp  TerminationCondition.hpp  WindowPolicy.hpp  pico.hpp
pico/Internals/: Microbatch.hpp  ParExecDF.hpp  TimedToken.hpp  Token.hpp  WindowPolicy.hpp  utils.hpp
pico/Internals/FFOperators/: BinaryMapFarm.hpp  FMapBatch.hpp  FMapPReduceBatch.hpp  FoldReduceBatch.hpp  MapBatch.hpp  MapPReduceBatch.hpp  PReduceFFNode.hpp  PReduceSeqFFNode.hpp  PReduceWin.hpp  StableSortBatch.hpp
pico/Internals/Graph/: SemanticDAG.hpp
pico/Internals/PEGOptimization/: defs.hpp
pico/Internals/Types/: FlatMapCollector.hpp  Global.hpp  KeyValue.hpp  Microbatch.hpp
pico/Operators/: BinaryMap.hpp  BinaryOperator.hpp  FlatMap.hpp  FoldReduce.hpp  JoinFlatMapByKey.hpp  Map.hpp  Operator.hpp  PReduce.hpp  Reduce.hpp  ReduceByKey.hpp  UnaryOperator.hpp
pico/Operators/InOut/: InputOperator.hpp  OutputOperator.hpp  ReadFromFile.hpp  ReadFromHDFS.hpp  (+4 more)
pico/defines/: Global.hpp
pico/ff_implementation/: FastFlowExecutor.hpp  defs.hpp  ff_config.hpp
scripts/: .gitignore  license.sh
test/: Makefile  maintest  maintest.cpp  maintest2.cpp  pico_foldred.cpp  pico_merge.cpp  pico_wc.cpp  pico_wc_socket.cpp
test/testdata/: plaintext.txt
test/testresult/: output1.txt  output2-sorted.txt
tests/: CMakeLists.txt  Makefile  README.md  create_inputs_tests.sh  flatmap.cpp  flatmap_join_by_key.cpp  input_output_file.cpp  iteration.cpp  numbers_file.txt  read_from_stdin.cpp  reduce_by_key.cpp  run_stream_tests.sh  run_tests.sh  streaming_reduce_by_key.cpp  test_driver.cpp  wordcount.cpp
tests/common/: Key_generator.hpp  basic_pipes.hpp  common_functions.hpp  input_wc.txt  io.hpp  occurrences.txt  test_driver.cpp  utils.hpp
tests/include/: basic_pipes.hpp  catch.hpp  common_functions.hpp  io.hpp  utils.hpp
tests/testdata/: CMakeLists.txt  Makefile  generate_lines.cpp  generate_pairs.cpp
(+81 files in other folders)
